# pico8-psx

./: .gitignore  .gitmodules  Makefile  README.md  rust-toolchain.toml
.github/workflows/: check.yml  deploy.yml
games/celeste/: Cargo.toml
games/celeste-collection/: Cargo.toml  build.rs
games/celeste-collection/.cargo/: config.toml
games/celeste-collection/src/: atmos.rs  main.rs
games/celeste-collection/src/assets/: cover_bonnie.rs  mod.rs  palette.rs
games/celeste/src/: backend.rs  game.rs  lib.rs  main.rs  rng.rs  sfx.rs
games/celeste/src/assets/: audio_data.rs  gfx.rs  mod.rs  synthtest_data.rs  tilemap.rs
games/celeste2/: Cargo.toml
games/celeste2/src/: backend.rs  game.rs  lib.rs  main.rs
games/celeste2/src/assets/: audio_data.rs  gfx.rs  levels.rs  mod.rs  palette.rs  tilemap.rs
games/demo/: Cargo.toml
games/demo/src/: main.rs
games/demo/src/assets/: cover_celeste.rs  cover_celeste2.rs  mod.rs
release/: README.txt  celeste-collection.cue
shared/: Cargo.toml
shared/.cargo/: config.toml
shared/src/: backend.rs  debug.rs  fixed.rs  font.rs  icons.rs  icons_data.rs  input.rs  lib.rs  menu_sfx_data.rs  menusfx.rs  palette.rs  pause.rs  save.rs  sfx.rs  sin_table.rs  util.rs
tools/: adpcm.py  compare_sfx.py  gen_icons.py  gen_long_waveforms.py  gen_menu_sfx.py  gen_waveforms.py  gen_waveforms_from_recording.py  music_ab.py  p8_to_rust.py  p8cap.py  p8shot.py  png_to_cover.py  record_pico8_sfx.py  sfx_ab.py  sfx_bench.py  sfx_bench.sh  synthtest_gen.py
tools/psx-audio-capture/: Cargo.toml
tools/psx-audio-capture/src/: main.rs
tools/rsx-audio-capture/: Cargo.toml
tools/rsx-audio-capture/src/: main.rs
