[package]
name    = "celeste"
version = "0.1.0"
edition = "2021"

# Stand-alone workspace root. Each game is built independently of the
# PSoXide submodule's own (host / sdk / engine) workspaces -- exactly
# how PSoXide's in-tree examples are structured.
[workspace]

[[bin]]
name = "celeste"
path = "src/main.rs"

# Offline audio test discs (fidelity work; not the game).
[[bin]]
name = "musictest"
path = "src/bin/musictest.rs"

[[bin]]
name = "soundtest"
path = "src/bin/soundtest.rs"

[profile.release]
# no_std has no unwinder; abort keeps the binary small.
panic         = "abort"
codegen-units = 1
lto           = true

# The shared PICO-8 runtime (backend/fixed/rng/sfx) + the SDK crates this
# crate's lib.rs/main.rs touch directly. backend/sfx's transitive SDK deps
# (vram/io/hw/spu) come in through `pico8`.
[dependencies]
pico8   = { path = "../../shared" }
psx-rt  = { path = "../../third_party/PSoXide/sdk/crates/psx-rt" }
psx-gpu = { path = "../../third_party/PSoXide/sdk/crates/psx-gpu" }
psx-pad = { path = "../../third_party/PSoXide/sdk/crates/psx-pad" }
