[package]
name    = "celeste2"
version = "0.1.0"
edition = "2021"

# Stand-alone workspace root. Each game is built independently of the
# PSoXide submodule's own (host / sdk / engine) workspaces -- exactly
# how PSoXide's in-tree examples are structured.
[workspace]

[[bin]]
name = "celeste2"
path = "src/main.rs"

# Offline audio/video test discs (fidelity + hardware checks; not the game).
[[bin]]
name = "musictest"
path = "src/bin/musictest.rs"

[[bin]]
name = "soundtest"
path = "src/bin/soundtest.rs"

[[bin]]
name = "musiso"
path = "src/bin/musiso.rs"

[[bin]]
name = "gputest"
path = "src/bin/gputest.rs"

[profile.release]
# no_std has no unwinder; abort keeps the binary small.
panic         = "abort"
codegen-units = 1
lto           = true

# The shared PICO-8 runtime + the SDK crates this crate touches directly.
[dependencies]
pico8   = { path = "../../shared" }
psx-rt  = { path = "../../third_party/PSoXide/sdk/crates/psx-rt" }
psx-gpu = { path = "../../third_party/PSoXide/sdk/crates/psx-gpu" }
psx-pad = { path = "../../third_party/PSoXide/sdk/crates/psx-pad" }
